--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -144,6 +144,7 @@
     <Compile Include="CaseIsAbout.cs" />
     <Compile Include="EmailLogAttempt.cs" />
     <Compile Include="EmailSendStatus.cs" />
+    <Compile Include="ExtendedCaseEntity\Case_ExtendedCaseEntity.cs" />
     <Compile Include="ExtendedCaseEntity\ExtendedCaseData.cs" />
     <Compile Include="ExtendedCaseEntity\ExtendedCaseForm.cs" />
     <Compile Include="Invoice\InvoiceArticleProductAreaEntity.cs" />
