[UPD] SelfService EF and dependencies

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -31,13 +31,14 @@
   </formLibConfigurable>
 
   <connectionStrings>
-    <!--add name="HelpdeskOracleDbContext" connectionString="User Id=DH;Password=hdikeaus;Direct=true;Data Source=dhsql2;Port=1521;SID=hdikeaus" providerName="Devart.Data.Oracle" /-->
-    <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql1;Initial Catalog=dh_support;User Id=SA;Password=;" providerName="System.Data.SqlClient" />
-    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql1;Initial Catalog=DH_Support;User Id=SA;Password=;" providerName="System.Data.OleDb" />-->
-    <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True"/>
-    <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBEmd;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
-    <add name="HelpdeskSqlServerDbContext" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />
+
+    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql3;Initial Catalog=dhHelpdeskNG_ExtendedCase;User Id=ExtendedCaseUser;Password=exUser;" providerName="System.Data.OleDb" />
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql3;Initial Catalog=dhHelpdeskNG_ExtendedCase;User Id=ExtendedCaseUser;Password=exUser;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />
+    <add name="DSN" connectionString="Password=exUser;Persist Security Info=True;User ID=ExtendedCaseUser;Initial Catalog=dhHelpdeskNG_ExtendedCase;Data Source=dhutvsql3;MultipleActiveResultSets=True" />
+    <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBDataAdminB;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
+
+    <!--<add name="HelpdeskSqlServerDbContext" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />-->
 
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql3;Initial Catalog=dhHelpdeskNG_SysTest;User Id=dhHelpdeskNG_SysTest_WebUser;Password=kgk270Q2;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />    
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql3;Initial Catalog=dhHelpdeskNG_SysTest;User Id=dhHelpdeskNG_SysTest_WebUser;Password=kgk270Q2;" providerName="System.Data.OleDb" />
@@ -116,7 +117,7 @@
     <authorization>
       <deny users="?"/>
     </authorization>
-    <!--<authentication mode="None" />-->
+    <authentication mode="Windows" />
     <httpRuntime targetFramework="4.5" requestValidationMode="4.5"/>
     <compilation targetFramework="4.5" debug="true">
       <assemblies>
@@ -129,7 +130,7 @@
     </compilation>
     <!--Commented by Identity and Access VS Package-->
 
-    <!--<identity impersonate="true" />-->
+    <identity impersonate="true" />
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
         <add namespace="System.Web.Helpers"/>
@@ -140,15 +141,15 @@
         <add namespace="System.Web.WebPages"/>
       </namespaces>
     </pages>
-    <identity impersonate="false" />
+    <!--<identity impersonate="false" />-->
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true">
+    <!--<modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />      
       <add name="WSFederationAuthenticationModule" type="System.IdentityModel.Services.WSFederationAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler" />
       <add name="SessionAuthenticationModule" type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler" />
-    </modules>
+    </modules>-->
     <staticContent>      
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
