--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
@@ -111,6 +111,8 @@
     <Compile Include="EntityConfigurations\BusinessRules\BRConditionConfiguration.cs" />
     <Compile Include="EntityConfigurations\BusinessRules\BRActionConfiguration.cs" />
     <Compile Include="EntityConfigurations\BusinessRules\BRActionParamsConfiguration.cs" />
+    <Compile Include="EntityConfigurations\CaseDocument\CaseDocumentConfiguration.cs" />
+    <Compile Include="EntityConfigurations\CaseDocument\CaseDocumentConditionConfiguration.cs" />
     <Compile Include="EntityConfigurations\CaseSolutionConditionPropertyConfiguration.cs" />
     <Compile Include="EntityConfigurations\Cases\CaseExtraFollowerConfiguration.cs" />
     <Compile Include="EntityConfigurations\Cases\CaseFollowUpConfiguration.cs" />
@@ -120,6 +122,7 @@
     <Compile Include="EntityConfigurations\ContractFieldSettingConfiguration.cs" />
     <Compile Include="EntityConfigurations\EmailLogAttemptConfiguration.cs" />
     <Compile Include="EntityConfigurations\ExtendedCaseEntity\Case_ExtendedCaseDataConfiguration.cs" />
+    <Compile Include="EntityConfigurations\ExtendedCaseEntity\ExtendedCaseValuesConfiguration.cs" />
     <Compile Include="EntityConfigurations\ExtendedCaseEntity\ExtendedCaseDataConfiguration.cs" />
     <Compile Include="EntityConfigurations\ExtendedCaseEntity\ExtendedCaseFormConfiguration.cs" />
     <Compile Include="EntityConfigurations\Invoice\InvoiceArticleProductAreaConfiguration.cs" />
@@ -244,8 +247,12 @@
     <Compile Include="MapperData\Logs\LogMapperData.cs" />
     <Compile Include="Mappers\Calendars\BusinessModelToEntity\CalendarToEntityMapper.cs" />
     <Compile Include="Mappers\Calendars\EntityToBusinessModel\CalendarToBusinessModelMapper.cs" />
+    <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentConditionToEntityMapper.cs" />
+    <Compile Include="Mappers\CaseDocument\EntityToBusinessModel\CaseDocumentConditionToBusinessModelMapper.cs" />
     <Compile Include="Mappers\Cases\BusinessModelToEntity\CaseModelToEntityMapper.cs" />
+    <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentToEntityMapper.cs" />
     <Compile Include="Mappers\Cases\BusinessModelToEntity\ExtendedCaseDataToEntityMapper.cs" />
+    <Compile Include="Mappers\Cases\BusinessModelToEntity\ExtendedCaseValueToEntityMapper.cs" />
     <Compile Include="Mappers\Cases\BusinessModelToEntity\ExtendedCaseFormToEntityMapper.cs" />
     <Compile Include="Mappers\Cases\BusinessModelToEntity\CaseSolutionConditionToEntityMapper.cs" />
     <Compile Include="Mappers\Cases\BusinessModelToEntity\CaseNotifierToEntityMapper.cs" />
@@ -254,6 +261,8 @@
     <Compile Include="Mappers\Cases\BusinessModelToEntity\CaseFilterFavoriteToEntityMapper.cs" />
     <Compile Include="Mappers\Cases\EntityToBusinessModel\CaseExtraFollowersToBusinessModelMapper.cs" />
     <Compile Include="Mappers\Cases\EntityToBusinessModel\CaseHistoryToCaseHistoryOverviewMapper.cs" />
+    <Compile Include="Mappers\CaseDocument\EntityToBusinessModel\CaseDocumentToBusinessModelMapper.cs" />
+    <Compile Include="Mappers\Cases\EntityToBusinessModel\ExtendedCaseValueToBusinessModelMapper.cs" />
     <Compile Include="Mappers\Cases\EntityToBusinessModel\ExtendedCaseDataToBusinessModelMapper.cs" />
     <Compile Include="Mappers\Cases\EntityToBusinessModel\ExtendedCaseFormToBusinessModelMapper.cs" />
     <Compile Include="Mappers\Cases\EntityToBusinessModel\CaseSolutionConditionToBusinessModelMapper.cs" />
@@ -422,6 +431,10 @@
     <Compile Include="Repositories\ADFS\IADFSRepository.cs" />
     <Compile Include="Repositories\BusinessRules\Concrete\BusinessRuleRepository.cs" />
     <Compile Include="Repositories\BusinessRules\IBusinessRuleRepository.cs" />
+    <Compile Include="Repositories\CaseDocument\Concrete\CaseDocumentRepository.cs" />
+    <Compile Include="Repositories\CaseDocument\Concrete\CaseDocumentConditionRepository.cs" />
+    <Compile Include="Repositories\CaseDocument\ICaseDocumentRepository.cs" />
+    <Compile Include="Repositories\CaseDocument\ICaseDocumentConditionRepository.cs" />
     <Compile Include="Repositories\CaseHistoryRepository.cs" />
     <Compile Include="Repositories\Cases\CaseExtraFollowersRepository.cs" />
     <Compile Include="Repositories\Cases\CaseFileRepository.cs" />
@@ -432,6 +445,7 @@
     <Compile Include="Repositories\Cases\CaseQuestionRepository.cs" />
     <Compile Include="Repositories\Cases\CaseSettingsRepository.cs" />
     <Compile Include="Repositories\Cases\CaseSolutionSettingRepository.cs" />
+    <Compile Include="Repositories\Cases\Concrete\ExtendedCaseValueRepository.cs" />
     <Compile Include="Repositories\Cases\Concrete\ExtendedCaseDataRepository.cs" />
     <Compile Include="Repositories\Cases\Concrete\ExtendedCaseFormRepository.cs" />
     <Compile Include="Repositories\Cases\Concrete\CaseSolutionConditionRepository.cs" />
@@ -439,6 +453,7 @@
     <Compile Include="Repositories\Cases\Concrete\CausingPartRepository.cs" />
     <Compile Include="Repositories\Cases\Concrete\CaseFilterFavoriteRepository.cs" />
     <Compile Include="Repositories\Cases\ICaseFilterFavoriteRepository.cs" />
+    <Compile Include="Repositories\IExtendedCaseValueRepository.cs" />
     <Compile Include="Repositories\IExtendedCaseDataRepository.cs" />
     <Compile Include="Repositories\IExtendedCaseFormRepository.cs" />
     <Compile Include="Repositories\ICaseSolutionConditionRepository.cs" />
