--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -279,6 +279,7 @@
     <Compile Include="Response\Questionnaire\OptionNote.cs" />
     <Compile Include="Services\CaseExtraFollowersService.cs" />
     <Compile Include="Services\CaseFollowUpService.cs" />
+    <Compile Include="Services\CaseDocumentService.cs" />
     <Compile Include="Services\CaseSolutionConditionService.cs" />
     <Compile Include="Services\CaseStatistic\CaseStatisticService.cs" />
     <Compile Include="Services\UniversalCase\IUniversalCaseService.cs" />
