--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -32,10 +32,18 @@
 
   <connectionStrings>
 
-    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql3;Initial Catalog=dhHelpdeskNG_ExtendedCase;User Id=ExtendedCaseUser;Password=exUser;" providerName="System.Data.OleDb" />
+    <!--<add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql3;Initial Catalog=dhHelpdeskNG_ExtendedCase;User Id=ExtendedCaseUser;Password=exUser;" providerName="System.Data.OleDb" />
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql3;Initial Catalog=dhHelpdeskNG_ExtendedCase;User Id=ExtendedCaseUser;Password=exUser;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />
     <add name="DSN" connectionString="Password=exUser;Persist Security Info=True;User ID=ExtendedCaseUser;Initial Catalog=dhHelpdeskNG_ExtendedCase;Data Source=dhutvsql3;MultipleActiveResultSets=True" />
+    <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBDataAdminB;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />-->
+
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL2; Initial Catalog=dhHelpdesk_IKEA_BSCHR; User Id=DH_Helpdesk; Password=;Network Library=dbmssocn;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB; Data Source=DHUTVSQL2; Initial Catalog=dhHelpdesk_IKEA_BSCHR; User Id=DH_Helpdesk; Password=;Network Library=dbmssocn;" providerName="System.Data.OleDb" />
+    <add name="HelpdeskIndexingService" connectionString="Provider=MSIDXS;" />
+    <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
     <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBDataAdminB;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
+
+
 
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />-->
