--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -282,6 +282,8 @@
     <Compile Include="Services\CaseDocumentService.cs" />
     <Compile Include="Services\CaseSolutionConditionService.cs" />
     <Compile Include="Services\CaseStatistic\CaseStatisticService.cs" />
+    <Compile Include="Services\ExtendedCase\ExtendedCaseService.cs" />
+    <Compile Include="Services\IExtendedCaseService.cs" />
     <Compile Include="Services\UniversalCase\IUniversalCaseService.cs" />
     <Compile Include="Services\Concrete\CaseLockService.cs" />
     <Compile Include="Services\Concrete\LogProgramService.cs" />
