[UPD] Case overview

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -91,20 +91,20 @@
     <!--<add key="DefaultEmployeeNumber" value="08052581" />-->
     <!--<add key="DefaultEmployeeNumber" value="11000098" />-->
     <!--<add key="DefaultEmployeeNumber" value="05310821" />-->
-    <add key="DefaultEmployeeNumber" value="05301010" />
+    <add key="DefaultEmployeeNumber" value="00100660" />
 
     <!--<add key="DefaultEmployeeNumber" value="05310821" />-->
     <add key="LogoutUrl" value="https://fed.apps.ikeadt.com/adfs/ls/?wa=wsignout1.0"/>
 
     <!-- Access Management API Keis-->
-    <add key="AM_Api_UriPath" value="http://dhhelpdesk-ikea-bschr-am-emd.datahalland.se/"/>
+    <add key="AM_Api_UriPath" value="http://dhhelpdesk-ikea-bschr-am-dataadminb.datahalland.se"/>
     <add key="AM_Api_UserName" value="OperatorTest1"/>
     <add key="AM_Api_Password" value="asd123!"/>
     
     <add key="SmtpServer" value="smtp.datahalland.se"/>
     <add key="SmtpPort" value="25"/>
   </appSettings>
-
+  
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
 
