[ADD] add WorkflowSteps to LM

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -26,6 +26,7 @@
         <country helpdeskCustomerId="31" employeePrefix="11" code="IE"/>
         <country helpdeskCustomerId="32" employeePrefix="41" code="KR"/>
         <country helpdeskCustomerId="34" employeePrefix="20" code="NO"/>
+        <country helpdeskCustomerId="39" employeePrefix="00" code="ST"/>
       </countries>
     </accessManagment>
   </formLibConfigurable>
@@ -91,14 +92,14 @@
     <!--<add key="DefaultEmployeeNumber" value="08052581" />-->
     <!--<add key="DefaultEmployeeNumber" value="11000098" />-->
     <!--<add key="DefaultEmployeeNumber" value="05310821" />-->
-    <add key="DefaultEmployeeNumber" value="00100660" />
+    <add key="DefaultEmployeeNumber" value="00125091" />
 
     <!--<add key="DefaultEmployeeNumber" value="05310821" />-->
     <add key="LogoutUrl" value="https://fed.apps.ikeadt.com/adfs/ls/?wa=wsignout1.0"/>
 
     <!-- Access Management API Keis-->
     <add key="AM_Api_UriPath" value="http://dhhelpdesk-ikea-bschr-am-dataadminb.datahalland.se"/>
-    <add key="AM_Api_UserName" value="OperatorTest1"/>
+    <add key="AM_Api_UserName" value="OperatorTest"/>
     <add key="AM_Api_Password" value="asd123!"/>
     
     <add key="SmtpServer" value="smtp.datahalland.se"/>
