[ADD] CaseDocument initial configuration of entities

--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Models\BusinessRules-Depricated\Rule.cs" />
     <Compile Include="Models\BusinessRules\BusinessRuleModel.cs" />
     <Compile Include="Models\BusinessRules\BusinessRuleReadModel.cs" />
+    <Compile Include="Models\CaseDocument\CaseDocumentTextModel.cs" />
+    <Compile Include="Models\CaseDocument\CaseDocumentParagraphModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentConditionModel.cs" />
     <Compile Include="Models\CaseType\CaseTypeItem.cs" />
