--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -197,6 +197,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Drawing">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry">
       <HintPath>..\packages\System.IdentityModel.Tokens.ValidatingIssuerNameRegistry.4.5.1\lib\net45\System.IdentityModel.Tokens.ValidatingIssuerNameRegistry.dll</HintPath>
     </Reference>
@@ -305,6 +308,7 @@
     <Compile Include="App_Start\NinjectModules\Modules\EFormModule.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\WebApi\Controllers\CaseApiController.cs" />
+    <Compile Include="Controllers\CaseDocumentController.cs" />
     <Compile Include="Infrastructure\Cryptography\AESCryptoProvider.cs" />
     <Compile Include="Infrastructure\Extensions\DicExtentions.cs" />
     <Compile Include="Infrastructure\Extensions\NewtonsoftJsonExtensions.cs" />
@@ -570,6 +574,7 @@
     <Content Include="Content\css\bootstrap-tagsinput.css" />
     <Content Include="Content\css\clickmultimenu_dropdown.css" />
     <Content Include="Content\css\custom\dynamic-cases.css" />
+    <Content Include="Content\css\extendedcase.css" />
     <Content Include="Content\css\images\sort_asc.png" />
     <Content Include="Content\css\images\sort_both.png" />
     <Content Include="Content\css\images\sort_desc.png" />
@@ -2534,6 +2539,7 @@
     <Content Include="img-profile\ikea-logo-login.png" />
     <Content Include="img-profile\ikea-logo.png" />
     <Content Include="img-profile\ikea-quality-text.png" />
+    <Content Include="img-profile\IKEA_logo_RGB_2.jpg" />
     <Content Include="img-profile\print-logo.png" />
     <Content Include="img-profile\profile.css" />
     <Content Include="Content\js\jsrender.min.js.map" />
@@ -3890,7 +3896,9 @@
     <Content Include="Views\FeedbackAnswer\ThankYou.cshtml" />
     <Content Include="Views\Shared\WorkflowStep.cshtml" />
     <Content Include="Views\CaseSolution\_Conditions.cshtml" />
-    <Content Include="Views\Shared\_CaseDocument.cshtml" />
+    <Content Include="Views\Cases\_CaseDocument.cshtml" />
+    <Content Include="Views\Cases\_CaseDocumentPrint.cshtml" />
+    <Content Include="Views\Cases\_CaseInformation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
