--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -85,6 +85,7 @@
     <Compile Include="BusinessRules\BRActionEntity.cs" />
     <Compile Include="BusinessRules\BRActionParamEntity.cs" />
     <Compile Include="CalendarSearch.cs" />
+    <Compile Include="CaseDocumentEntity\CaseDocumentTemplateEntity.cs" />
     <Compile Include="CaseDocumentEntity\CaseDocumentTextConditionEntity.cs" />
     <Compile Include="CaseDocumentEntity\CaseDocumentParagraphConditionEntity.cs" />
     <Compile Include="CaseDocumentEntity\CaseDocumentTextEntity.cs" />
